--- a/index.html
+++ b/index.html
@@ -365,6 +365,10 @@
                           <li><span class="icon icon-xs icon-primary mdi mdi-clock"></span><a href="media-post.html">February 16, 2018</a></li>
                         </ul>
                         <p>Today we’re taking a closer look at black tea in its various forms, from smoky and chocolatey to bright and...</p>
+
+                        <div class='mt-5'>
+                          <button class='btn btn-md btn-primary' data-ordertea='@orderBlackTea' data-target="#orderTeaModal" data-toggle="modal">Order Now</button>
+                        </div>
                       </div>
                     </article>
             </div>
@@ -378,6 +382,9 @@
                     <li><span class="icon icon-xs icon-primary mdi mdi-clock"></span><a href="media-post.html">February 16, 2018</a></li>
                   </ul>
                   <p>Today we’re taking a closer look at black tea in its various forms, from smoky and chocolatey to bright and...</p>
+                  <div class='mt-5'>
+                    <button class='btn btn-md btn-primary' data-ordertea="@orderGreenTea" data-target="#orderTeaModal" data-toggle="modal">Order Now</button>
+                  </div>
                 </div>
               </article>
       </div>
@@ -529,8 +536,58 @@
          <script src="thirdparties/js/core.min.js"></script>
 
     <script src="thirdparties/js/script.js"></script>
+
+
+    <!-- Process Modals -->
+    <script>
+      $('#orderTeaModal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget) // Button that triggered the modal
+        var recipient = button.data('ordertea') // Extract info from data-* attributes
+     
+        var modal = $(this);
+
+        console.log("This modal: ", modal);
+        modal.find('.modal-title').text('New message to ' + recipient)
+        modal.find('.modal-body input').val(recipient)
+      })
+    </script>
+
+
+    <!-- End of Process Modals -->
       
 
+
+    <!-- Modals-->
+    <div class="modal fade" id="orderTeaModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="recipient-name" class="col-form-label">Recipient:</label>
+                <input type="text" class="form-control" id="recipient-name">
+              </div>
+              <div class="form-group">
+                <label for="message-text" class="col-form-label">Message:</label>
+                <textarea class="form-control" id="message-text"></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Send message</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End of Modals-->
 	
 </body>
 </html>
